--- a/frontend-take-home-assignment-master/src/index.html
+++ b/frontend-take-home-assignment-master/src/index.html
@@ -1,6 +1,26 @@
 <html>
-  <body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buy a House</title>
+
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!--Css Materialize-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!--Css-->
+    <link rel="stylesheet" href="index.css">
+
+
+  </head>
+  <body lang="en">
     <div id="root"></div>
+
+    <!--JS Materialize-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    
+    <!--JS React-->
     <script src="./index.js"></script>
   </body>
 </html>
