--- a/frontend-take-home-assignment-master/src/index.html
+++ b/frontend-take-home-assignment-master/src/index.html
@@ -21,6 +21,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
     <!--JS React-->
-    <script src="./index.js"></script>
+    <script src="./index.tsx"></script>
   </body>
 </html>
